# 1c-accounting-mcp

./: .gitignore  .npmignore  README.md  package.json  pyproject.toml  requirements.txt
src/: __init__.py  main.py  models.py  server.py
src/tools/: __init__.py  test_tool.py
